# pytorch-sandbox

./: LICENSE
.devcontainer/: Dockerfile
hello-world/: pyproject.toml
hello-world/hello_world/: hello-world.ipynb
