[tool.poetry]
name = "hello-world"
version = "0.1.0"
description = ""
authors = ["Ken Robinson <kenrobinsonter@gmail.com>"]
readme = "README.md"
packages = [{include = "hello_world"}]

[tool.poetry.dependencies]
python = "^3.10"
ipykernel = "^6.24.0"
jupyter = "^1.0.0"
lightning = "^2.0.5"
torch = ">=2.0.0, !=2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
